# deep_research_from_scratch

./: .gitignore
network_investigator/: DEVELOPMENT_PLAN.md  README.md  interactive_test.py  langgraph.json  projectplan.md  pyproject.toml
network_investigator/examples/: test_context_enhancement.py
network_investigator/src/network_investigator/: __init__.py
network_investigator/src/network_investigator/agents/: context_enhancer.py
network_investigator/src/network_investigator/core/: __init__.py  prompts.py  schemas.py  state.py
network_investigator/src/network_investigator/utils/: __init__.py  helpers.py
network_investigator/tests/: test_setup.py
